# terrapi-client

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
src/terrabyte/: __init__.py  client.py  config.py  settings.py  util.py
src/terrapi/: client.py
src/terrapi/client/: stac.py
test/: full_circle.py
