[metadata]
name = terrapi-client
version = attr: terrapi.client.__version__
author = Julian Zeidler, Jonas Eberle, Fabian Schindler
author_email = terrabyte@dlr.de
license = MIT
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires = 
    terrapi @ git+https://github.com/DLR-terrabyte/terrapi.git
    attrs==23.1.0
    certifi==2023.7.22
    idna==3.4
    jsonschema==4.19.1
    pystac==1.8.4
    pystac-client==0.7.5
    python-dateutil==2.8.2
    referencing==0.30.2
    requests==2.31.0
    rpds-py==0.10.6
    six==1.16.0
    urllib3==2.0.2

[options.packages.find]
where = src
exclude =
    tests

# [options.package_data]
# terrabyte = *.json

[mypy]
exclude = (.tox|build|dist|.eggs|docs/conf.py|.venv|__init__.py|tests)
ignore_missing_imports = True

[flake8]
max-line-length = 90
exclude = .venv, build, tests
ignore = W503,E203
