[metadata]
name = terrapi-client
version = attr: terrapi.client.__version__
author = Julian Zeidler, Jonas Eberle, Fabian Schindler
author_email = terrabyte@dlr.de
license = MIT
description =
long_description = file: README.md
long_description_content_type = text/markdown
url =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    = src
include_package_data = True
python_requires = >=3.9
install_requires = 
    terrapi @ git+https://github.com/DLR-terrabyte/terrapi.git@v1.0.0
    pystac==1.8.4
    pystac-client==0.7.5

[options.packages.find]
where = src
exclude =
    tests

# [options.package_data]
# terrabyte = *.json

[mypy]
exclude = (.tox|build|dist|.eggs|docs/conf.py|.venv|__init__.py|tests)
ignore_missing_imports = True

[flake8]
max-line-length = 90
exclude = .venv, build, tests
ignore = W503,E203
